--- a/index.html
+++ b/index.html
@@ -10,25 +10,7 @@
     <div class="container">
         <h1>Current Time in Japan</h1>
         <div id="japanTime">
-            Loading...
-        </div>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Japan Time</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Current Time in Japan</h1>
-        <div id="japanTime">
-            Loading...
+            <!-- Time will be inserted here by JavaScript -->
         </div>
     </div>
 
