--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Japan Time</title>
+    <!-- Google Fonts for a digital-like font -->
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Current Time in Japan</h1>
-        <div id="japanTime">
-            <!-- Time will be inserted here by JavaScript -->
-        </div>
+        <!-- Optional title, or remove if you want only the clock -->
+        <h1 class="header-title">Current Time in Japan</h1>
+
+        <div id="japanDate" class="date-display"></div>
+        <div id="japanTime" class="time-display"></div>
     </div>
 
     <script src="script.js"></script>
